# napalm-junos

./: .coveragerc  .gitignore  .pylintrc  .testr.conf  .travis.yml  HACKING.rst  TESTING.rst  requirements.txt  setup-old.py  setup.cfg  setup.py  test-requirements.txt  tox.ini
napalm_junos/: __init__.py  globals.py  junos.py
napalm_junos/tests/: base.py
napalm_junos/tests/unit/: SampleTest.py  test_junosdriver.py  test_sample.py
napalm_junos/utils/: __init__.py  junos_views.yml
napalm_junos/yang_mappings/parsers/: interfaces.yaml
napalm_junos/yang_mappings/parsers/oc-if/: interfaces.yaml
napalm_junos/yang_mappings/parsers/oc-ip/: ipv4.yaml
napalm_junos/yang_mappings/parsers/oc-vlan/: routed_vlan.yaml
napalm_junos/yang_mappings/translators/: interfaces.yaml
napalm_junos/yang_mappings/translators/oc-if/: interfaces.yaml
napalm_junos/yang_mappings/translators/oc-ip/: ipv4.yaml
napalm_junos/yang_mappings/translators/oc-vlan/: vlan.yaml
test/unit/: TestJunOSDriver.py
tools/: check_unit_test_structure.sh  clean.sh  coding-checks.sh  install_venv_common.py  pretty_tox.sh  split.sh
