[metadata]
name = napalm-junos
version = 0.2.2
summary = Network Automation and Programmability Abstraction Layer
            with Multivendor support
description-file = README.md
author = David Barroso
author-email = dbarrosop@dravetech.com
home-page = https://github.com/napalm-automation/napalm
classifier =
    Topic :: Utilities
    Programming Language :: Python
    Operating System :: POSIX :: Linux
    Operating System :: MacOS

[files]
packages =
    napalm

[entry_points]
console_scripts =
    cl_napalm_configure = napalm.clitools.cl_napalm_configure:main
